objects/LAT_RegionalPOP__c.object
<CustomObject>
    <fields>
        <fullName>AmountLeft__c</fullName>
        <formula>Amount__c - Assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Quantidade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <label>Distribuido</label>
        <summarizedField>LAT_KAMPOP__c.Amount__c</summarizedField>
        <summaryForeignKey>LAT_KAMPOP__c.RegionalPOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>HYPERLINK(OwnerId, Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responsável</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Supervisor_POP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional POP</label>
        <referenceTo>LAT_RegionalSupervisor__c</referenceTo>
        <relationshipName>Regional_POP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Regional_Supervisor_POP__r.Id  , Regional_Supervisor_POP__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKURegional__c</fullName>
        <formula>product__r.Sku__c + &apos;-&apos; + Regional_Supervisor_POP__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clave</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubRegional__c</fullName>
        <label>Sub Regional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Descrição Material</label>
        <referenceTo>LAT_Produto_POP__c</referenceTo>
        <relationshipLabel>Distribuição Material POP</relationshipLabel>
        <relationshipName>Distribui_o_Produtos_POP</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sku__c</fullName>
        <formula>product__r.Sku__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código Material</label>
        <type>Text</type>
    </fields>
    <label>Distribuição Material POP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Owner_Name__c</columns>
        <columns>Regional_Supervisor_POP__c</columns>
        <columns>product__c</columns>
        <columns>sku__c</columns>
        <columns>Amount__c</columns>
        <columns>Assigned__c</columns>
        <columns>AmountLeft__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DM-{0000}</displayFormat>
        <label>Código Distribuição Material</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribuição Material POP</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>